--- a/registration.html
+++ b/registration.html
@@ -3,7 +3,7 @@
 <head>
     <title>Registration</title>
     <link rel="stylesheet" href="styles.css">
-</head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"></head>
 <body>
     <div class="whole_page">
         <div class="center long-height">
